parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> comandos
Rule 1     comandos -> comando_mkdisk
Rule 2     comandos -> comando_execute
Rule 3     comandos -> comando_rep
Rule 4     comandos -> empty_production
Rule 5     comandos -> comando_fdisk
Rule 6     comandos -> comando_rmdisk
Rule 7     empty_production -> <empty>
Rule 8     comando_mkdisk -> MKDISK lista_mkdisk
Rule 9     lista_mkdisk -> lista_mkdisk parametros_mkdisk
Rule 10    lista_mkdisk -> parametros_mkdisk
Rule 11    parametros_mkdisk -> param_size
Rule 12    parametros_mkdisk -> param_unit
Rule 13    parametros_mkdisk -> param_path
Rule 14    parametros_mkdisk -> param_fit
Rule 15    comando_rmdisk -> RMDISK lista_rmdisk
Rule 16    lista_rmdisk -> lista_rmdisk parametros_rmdisk
Rule 17    lista_rmdisk -> parametros_rmdisk
Rule 18    parametros_rmdisk -> param_path
Rule 19    comando_execute -> EXECUTE lista_execute
Rule 20    lista_execute -> lista_execute parametros_execute
Rule 21    lista_execute -> parametros_execute
Rule 22    parametros_execute -> param_path
Rule 23    comando_rep -> REP
Rule 24    comando_fdisk -> FDISK lista_fdisk
Rule 25    lista_fdisk -> lista_fdisk parametros_fdisk
Rule 26    lista_fdisk -> parametros_fdisk
Rule 27    parametros_fdisk -> param_size
Rule 28    parametros_fdisk -> param_path
Rule 29    parametros_fdisk -> param_name
Rule 30    parametros_fdisk -> param_unit
Rule 31    parametros_fdisk -> param_type
Rule 32    parametros_fdisk -> param_fit
Rule 33    parametros_fdisk -> param_delete
Rule 34    parametros_fdisk -> param_add
Rule 35    param_size -> GUION SIZE IGUAL ENTERO
Rule 36    param_path -> GUION PATH IGUAL CADENA
Rule 37    param_path -> GUION PATH IGUAL ID
Rule 38    param_unit -> GUION UNIT IGUAL CADENA
Rule 39    param_unit -> GUION UNIT IGUAL ID
Rule 40    param_name -> GUION NAME IGUAL CADENA
Rule 41    param_name -> GUION NAME IGUAL ID
Rule 42    param_fit -> GUION FIT IGUAL CADENA
Rule 43    param_fit -> GUION FIT IGUAL ID
Rule 44    param_type -> GUION TYPE IGUAL CADENA
Rule 45    param_type -> GUION TYPE IGUAL ID
Rule 46    param_delete -> GUION DELETE IGUAL CADENA
Rule 47    param_delete -> GUION DELETE IGUAL ID
Rule 48    param_add -> GUION ADD IGUAL ENTERO

Terminals, with rules where they appear

ADD                  : 48
CADENA               : 36 38 40 42 44 46
DELETE               : 46 47
ENTERO               : 35 48
EXECUTE              : 19
FDISK                : 24
FIT                  : 42 43
GUION                : 35 36 37 38 39 40 41 42 43 44 45 46 47 48
ID                   : 37 39 41 43 45 47
IGUAL                : 35 36 37 38 39 40 41 42 43 44 45 46 47 48
MKDISK               : 8
NAME                 : 40 41
PATH                 : 36 37
REP                  : 23
RMDISK               : 15
SIZE                 : 35
TYPE                 : 44 45
UNIT                 : 38 39
error                : 

Nonterminals, with rules where they appear

comando_execute      : 2
comando_fdisk        : 5
comando_mkdisk       : 1
comando_rep          : 3
comando_rmdisk       : 6
comandos             : 0
empty_production     : 4
lista_execute        : 19 20
lista_fdisk          : 24 25
lista_mkdisk         : 8 9
lista_rmdisk         : 15 16
param_add            : 34
param_delete         : 33
param_fit            : 14 32
param_name           : 29
param_path           : 13 18 22 28
param_size           : 11 27
param_type           : 31
param_unit           : 12 30
parametros_execute   : 20 21
parametros_fdisk     : 25 26
parametros_mkdisk    : 9 10
parametros_rmdisk    : 16 17

Parsing method: LALR

state 0

    (0) S' -> . comandos
    (1) comandos -> . comando_mkdisk
    (2) comandos -> . comando_execute
    (3) comandos -> . comando_rep
    (4) comandos -> . empty_production
    (5) comandos -> . comando_fdisk
    (6) comandos -> . comando_rmdisk
    (8) comando_mkdisk -> . MKDISK lista_mkdisk
    (19) comando_execute -> . EXECUTE lista_execute
    (23) comando_rep -> . REP
    (7) empty_production -> .
    (24) comando_fdisk -> . FDISK lista_fdisk
    (15) comando_rmdisk -> . RMDISK lista_rmdisk

    MKDISK          shift and go to state 8
    EXECUTE         shift and go to state 9
    REP             shift and go to state 10
    $end            reduce using rule 7 (empty_production -> .)
    FDISK           shift and go to state 11
    RMDISK          shift and go to state 12

    comandos                       shift and go to state 1
    comando_mkdisk                 shift and go to state 2
    comando_execute                shift and go to state 3
    comando_rep                    shift and go to state 4
    empty_production               shift and go to state 5
    comando_fdisk                  shift and go to state 6
    comando_rmdisk                 shift and go to state 7

state 1

    (0) S' -> comandos .



state 2

    (1) comandos -> comando_mkdisk .

    $end            reduce using rule 1 (comandos -> comando_mkdisk .)


state 3

    (2) comandos -> comando_execute .

    $end            reduce using rule 2 (comandos -> comando_execute .)


state 4

    (3) comandos -> comando_rep .

    $end            reduce using rule 3 (comandos -> comando_rep .)


state 5

    (4) comandos -> empty_production .

    $end            reduce using rule 4 (comandos -> empty_production .)


state 6

    (5) comandos -> comando_fdisk .

    $end            reduce using rule 5 (comandos -> comando_fdisk .)


state 7

    (6) comandos -> comando_rmdisk .

    $end            reduce using rule 6 (comandos -> comando_rmdisk .)


state 8

    (8) comando_mkdisk -> MKDISK . lista_mkdisk
    (9) lista_mkdisk -> . lista_mkdisk parametros_mkdisk
    (10) lista_mkdisk -> . parametros_mkdisk
    (11) parametros_mkdisk -> . param_size
    (12) parametros_mkdisk -> . param_unit
    (13) parametros_mkdisk -> . param_path
    (14) parametros_mkdisk -> . param_fit
    (35) param_size -> . GUION SIZE IGUAL ENTERO
    (38) param_unit -> . GUION UNIT IGUAL CADENA
    (39) param_unit -> . GUION UNIT IGUAL ID
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID
    (42) param_fit -> . GUION FIT IGUAL CADENA
    (43) param_fit -> . GUION FIT IGUAL ID

    GUION           shift and go to state 19

    lista_mkdisk                   shift and go to state 13
    parametros_mkdisk              shift and go to state 14
    param_size                     shift and go to state 15
    param_unit                     shift and go to state 16
    param_path                     shift and go to state 17
    param_fit                      shift and go to state 18

state 9

    (19) comando_execute -> EXECUTE . lista_execute
    (20) lista_execute -> . lista_execute parametros_execute
    (21) lista_execute -> . parametros_execute
    (22) parametros_execute -> . param_path
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID

    GUION           shift and go to state 23

    lista_execute                  shift and go to state 20
    parametros_execute             shift and go to state 21
    param_path                     shift and go to state 22

state 10

    (23) comando_rep -> REP .

    $end            reduce using rule 23 (comando_rep -> REP .)


state 11

    (24) comando_fdisk -> FDISK . lista_fdisk
    (25) lista_fdisk -> . lista_fdisk parametros_fdisk
    (26) lista_fdisk -> . parametros_fdisk
    (27) parametros_fdisk -> . param_size
    (28) parametros_fdisk -> . param_path
    (29) parametros_fdisk -> . param_name
    (30) parametros_fdisk -> . param_unit
    (31) parametros_fdisk -> . param_type
    (32) parametros_fdisk -> . param_fit
    (33) parametros_fdisk -> . param_delete
    (34) parametros_fdisk -> . param_add
    (35) param_size -> . GUION SIZE IGUAL ENTERO
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID
    (40) param_name -> . GUION NAME IGUAL CADENA
    (41) param_name -> . GUION NAME IGUAL ID
    (38) param_unit -> . GUION UNIT IGUAL CADENA
    (39) param_unit -> . GUION UNIT IGUAL ID
    (44) param_type -> . GUION TYPE IGUAL CADENA
    (45) param_type -> . GUION TYPE IGUAL ID
    (42) param_fit -> . GUION FIT IGUAL CADENA
    (43) param_fit -> . GUION FIT IGUAL ID
    (46) param_delete -> . GUION DELETE IGUAL CADENA
    (47) param_delete -> . GUION DELETE IGUAL ID
    (48) param_add -> . GUION ADD IGUAL ENTERO

    GUION           shift and go to state 34

    lista_fdisk                    shift and go to state 24
    parametros_fdisk               shift and go to state 25
    param_size                     shift and go to state 26
    param_path                     shift and go to state 27
    param_name                     shift and go to state 28
    param_unit                     shift and go to state 29
    param_type                     shift and go to state 30
    param_fit                      shift and go to state 31
    param_delete                   shift and go to state 32
    param_add                      shift and go to state 33

state 12

    (15) comando_rmdisk -> RMDISK . lista_rmdisk
    (16) lista_rmdisk -> . lista_rmdisk parametros_rmdisk
    (17) lista_rmdisk -> . parametros_rmdisk
    (18) parametros_rmdisk -> . param_path
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID

    GUION           shift and go to state 23

    lista_rmdisk                   shift and go to state 35
    parametros_rmdisk              shift and go to state 36
    param_path                     shift and go to state 37

state 13

    (8) comando_mkdisk -> MKDISK lista_mkdisk .
    (9) lista_mkdisk -> lista_mkdisk . parametros_mkdisk
    (11) parametros_mkdisk -> . param_size
    (12) parametros_mkdisk -> . param_unit
    (13) parametros_mkdisk -> . param_path
    (14) parametros_mkdisk -> . param_fit
    (35) param_size -> . GUION SIZE IGUAL ENTERO
    (38) param_unit -> . GUION UNIT IGUAL CADENA
    (39) param_unit -> . GUION UNIT IGUAL ID
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID
    (42) param_fit -> . GUION FIT IGUAL CADENA
    (43) param_fit -> . GUION FIT IGUAL ID

    $end            reduce using rule 8 (comando_mkdisk -> MKDISK lista_mkdisk .)
    GUION           shift and go to state 19

    parametros_mkdisk              shift and go to state 38
    param_size                     shift and go to state 15
    param_unit                     shift and go to state 16
    param_path                     shift and go to state 17
    param_fit                      shift and go to state 18

state 14

    (10) lista_mkdisk -> parametros_mkdisk .

    GUION           reduce using rule 10 (lista_mkdisk -> parametros_mkdisk .)
    $end            reduce using rule 10 (lista_mkdisk -> parametros_mkdisk .)


state 15

    (11) parametros_mkdisk -> param_size .

    GUION           reduce using rule 11 (parametros_mkdisk -> param_size .)
    $end            reduce using rule 11 (parametros_mkdisk -> param_size .)


state 16

    (12) parametros_mkdisk -> param_unit .

    GUION           reduce using rule 12 (parametros_mkdisk -> param_unit .)
    $end            reduce using rule 12 (parametros_mkdisk -> param_unit .)


state 17

    (13) parametros_mkdisk -> param_path .

    GUION           reduce using rule 13 (parametros_mkdisk -> param_path .)
    $end            reduce using rule 13 (parametros_mkdisk -> param_path .)


state 18

    (14) parametros_mkdisk -> param_fit .

    GUION           reduce using rule 14 (parametros_mkdisk -> param_fit .)
    $end            reduce using rule 14 (parametros_mkdisk -> param_fit .)


state 19

    (35) param_size -> GUION . SIZE IGUAL ENTERO
    (38) param_unit -> GUION . UNIT IGUAL CADENA
    (39) param_unit -> GUION . UNIT IGUAL ID
    (36) param_path -> GUION . PATH IGUAL CADENA
    (37) param_path -> GUION . PATH IGUAL ID
    (42) param_fit -> GUION . FIT IGUAL CADENA
    (43) param_fit -> GUION . FIT IGUAL ID

    SIZE            shift and go to state 39
    UNIT            shift and go to state 40
    PATH            shift and go to state 41
    FIT             shift and go to state 42


state 20

    (19) comando_execute -> EXECUTE lista_execute .
    (20) lista_execute -> lista_execute . parametros_execute
    (22) parametros_execute -> . param_path
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID

    $end            reduce using rule 19 (comando_execute -> EXECUTE lista_execute .)
    GUION           shift and go to state 23

    parametros_execute             shift and go to state 43
    param_path                     shift and go to state 22

state 21

    (21) lista_execute -> parametros_execute .

    GUION           reduce using rule 21 (lista_execute -> parametros_execute .)
    $end            reduce using rule 21 (lista_execute -> parametros_execute .)


state 22

    (22) parametros_execute -> param_path .

    GUION           reduce using rule 22 (parametros_execute -> param_path .)
    $end            reduce using rule 22 (parametros_execute -> param_path .)


state 23

    (36) param_path -> GUION . PATH IGUAL CADENA
    (37) param_path -> GUION . PATH IGUAL ID

    PATH            shift and go to state 41


state 24

    (24) comando_fdisk -> FDISK lista_fdisk .
    (25) lista_fdisk -> lista_fdisk . parametros_fdisk
    (27) parametros_fdisk -> . param_size
    (28) parametros_fdisk -> . param_path
    (29) parametros_fdisk -> . param_name
    (30) parametros_fdisk -> . param_unit
    (31) parametros_fdisk -> . param_type
    (32) parametros_fdisk -> . param_fit
    (33) parametros_fdisk -> . param_delete
    (34) parametros_fdisk -> . param_add
    (35) param_size -> . GUION SIZE IGUAL ENTERO
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID
    (40) param_name -> . GUION NAME IGUAL CADENA
    (41) param_name -> . GUION NAME IGUAL ID
    (38) param_unit -> . GUION UNIT IGUAL CADENA
    (39) param_unit -> . GUION UNIT IGUAL ID
    (44) param_type -> . GUION TYPE IGUAL CADENA
    (45) param_type -> . GUION TYPE IGUAL ID
    (42) param_fit -> . GUION FIT IGUAL CADENA
    (43) param_fit -> . GUION FIT IGUAL ID
    (46) param_delete -> . GUION DELETE IGUAL CADENA
    (47) param_delete -> . GUION DELETE IGUAL ID
    (48) param_add -> . GUION ADD IGUAL ENTERO

    $end            reduce using rule 24 (comando_fdisk -> FDISK lista_fdisk .)
    GUION           shift and go to state 34

    parametros_fdisk               shift and go to state 44
    param_size                     shift and go to state 26
    param_path                     shift and go to state 27
    param_name                     shift and go to state 28
    param_unit                     shift and go to state 29
    param_type                     shift and go to state 30
    param_fit                      shift and go to state 31
    param_delete                   shift and go to state 32
    param_add                      shift and go to state 33

state 25

    (26) lista_fdisk -> parametros_fdisk .

    GUION           reduce using rule 26 (lista_fdisk -> parametros_fdisk .)
    $end            reduce using rule 26 (lista_fdisk -> parametros_fdisk .)


state 26

    (27) parametros_fdisk -> param_size .

    GUION           reduce using rule 27 (parametros_fdisk -> param_size .)
    $end            reduce using rule 27 (parametros_fdisk -> param_size .)


state 27

    (28) parametros_fdisk -> param_path .

    GUION           reduce using rule 28 (parametros_fdisk -> param_path .)
    $end            reduce using rule 28 (parametros_fdisk -> param_path .)


state 28

    (29) parametros_fdisk -> param_name .

    GUION           reduce using rule 29 (parametros_fdisk -> param_name .)
    $end            reduce using rule 29 (parametros_fdisk -> param_name .)


state 29

    (30) parametros_fdisk -> param_unit .

    GUION           reduce using rule 30 (parametros_fdisk -> param_unit .)
    $end            reduce using rule 30 (parametros_fdisk -> param_unit .)


state 30

    (31) parametros_fdisk -> param_type .

    GUION           reduce using rule 31 (parametros_fdisk -> param_type .)
    $end            reduce using rule 31 (parametros_fdisk -> param_type .)


state 31

    (32) parametros_fdisk -> param_fit .

    GUION           reduce using rule 32 (parametros_fdisk -> param_fit .)
    $end            reduce using rule 32 (parametros_fdisk -> param_fit .)


state 32

    (33) parametros_fdisk -> param_delete .

    GUION           reduce using rule 33 (parametros_fdisk -> param_delete .)
    $end            reduce using rule 33 (parametros_fdisk -> param_delete .)


state 33

    (34) parametros_fdisk -> param_add .

    GUION           reduce using rule 34 (parametros_fdisk -> param_add .)
    $end            reduce using rule 34 (parametros_fdisk -> param_add .)


state 34

    (35) param_size -> GUION . SIZE IGUAL ENTERO
    (36) param_path -> GUION . PATH IGUAL CADENA
    (37) param_path -> GUION . PATH IGUAL ID
    (40) param_name -> GUION . NAME IGUAL CADENA
    (41) param_name -> GUION . NAME IGUAL ID
    (38) param_unit -> GUION . UNIT IGUAL CADENA
    (39) param_unit -> GUION . UNIT IGUAL ID
    (44) param_type -> GUION . TYPE IGUAL CADENA
    (45) param_type -> GUION . TYPE IGUAL ID
    (42) param_fit -> GUION . FIT IGUAL CADENA
    (43) param_fit -> GUION . FIT IGUAL ID
    (46) param_delete -> GUION . DELETE IGUAL CADENA
    (47) param_delete -> GUION . DELETE IGUAL ID
    (48) param_add -> GUION . ADD IGUAL ENTERO

    SIZE            shift and go to state 39
    PATH            shift and go to state 41
    NAME            shift and go to state 45
    UNIT            shift and go to state 40
    TYPE            shift and go to state 46
    FIT             shift and go to state 42
    DELETE          shift and go to state 47
    ADD             shift and go to state 48


state 35

    (15) comando_rmdisk -> RMDISK lista_rmdisk .
    (16) lista_rmdisk -> lista_rmdisk . parametros_rmdisk
    (18) parametros_rmdisk -> . param_path
    (36) param_path -> . GUION PATH IGUAL CADENA
    (37) param_path -> . GUION PATH IGUAL ID

    $end            reduce using rule 15 (comando_rmdisk -> RMDISK lista_rmdisk .)
    GUION           shift and go to state 23

    parametros_rmdisk              shift and go to state 49
    param_path                     shift and go to state 37

state 36

    (17) lista_rmdisk -> parametros_rmdisk .

    GUION           reduce using rule 17 (lista_rmdisk -> parametros_rmdisk .)
    $end            reduce using rule 17 (lista_rmdisk -> parametros_rmdisk .)


state 37

    (18) parametros_rmdisk -> param_path .

    GUION           reduce using rule 18 (parametros_rmdisk -> param_path .)
    $end            reduce using rule 18 (parametros_rmdisk -> param_path .)


state 38

    (9) lista_mkdisk -> lista_mkdisk parametros_mkdisk .

    GUION           reduce using rule 9 (lista_mkdisk -> lista_mkdisk parametros_mkdisk .)
    $end            reduce using rule 9 (lista_mkdisk -> lista_mkdisk parametros_mkdisk .)


state 39

    (35) param_size -> GUION SIZE . IGUAL ENTERO

    IGUAL           shift and go to state 50


state 40

    (38) param_unit -> GUION UNIT . IGUAL CADENA
    (39) param_unit -> GUION UNIT . IGUAL ID

    IGUAL           shift and go to state 51


state 41

    (36) param_path -> GUION PATH . IGUAL CADENA
    (37) param_path -> GUION PATH . IGUAL ID

    IGUAL           shift and go to state 52


state 42

    (42) param_fit -> GUION FIT . IGUAL CADENA
    (43) param_fit -> GUION FIT . IGUAL ID

    IGUAL           shift and go to state 53


state 43

    (20) lista_execute -> lista_execute parametros_execute .

    GUION           reduce using rule 20 (lista_execute -> lista_execute parametros_execute .)
    $end            reduce using rule 20 (lista_execute -> lista_execute parametros_execute .)


state 44

    (25) lista_fdisk -> lista_fdisk parametros_fdisk .

    GUION           reduce using rule 25 (lista_fdisk -> lista_fdisk parametros_fdisk .)
    $end            reduce using rule 25 (lista_fdisk -> lista_fdisk parametros_fdisk .)


state 45

    (40) param_name -> GUION NAME . IGUAL CADENA
    (41) param_name -> GUION NAME . IGUAL ID

    IGUAL           shift and go to state 54


state 46

    (44) param_type -> GUION TYPE . IGUAL CADENA
    (45) param_type -> GUION TYPE . IGUAL ID

    IGUAL           shift and go to state 55


state 47

    (46) param_delete -> GUION DELETE . IGUAL CADENA
    (47) param_delete -> GUION DELETE . IGUAL ID

    IGUAL           shift and go to state 56


state 48

    (48) param_add -> GUION ADD . IGUAL ENTERO

    IGUAL           shift and go to state 57


state 49

    (16) lista_rmdisk -> lista_rmdisk parametros_rmdisk .

    GUION           reduce using rule 16 (lista_rmdisk -> lista_rmdisk parametros_rmdisk .)
    $end            reduce using rule 16 (lista_rmdisk -> lista_rmdisk parametros_rmdisk .)


state 50

    (35) param_size -> GUION SIZE IGUAL . ENTERO

    ENTERO          shift and go to state 58


state 51

    (38) param_unit -> GUION UNIT IGUAL . CADENA
    (39) param_unit -> GUION UNIT IGUAL . ID

    CADENA          shift and go to state 59
    ID              shift and go to state 60


state 52

    (36) param_path -> GUION PATH IGUAL . CADENA
    (37) param_path -> GUION PATH IGUAL . ID

    CADENA          shift and go to state 61
    ID              shift and go to state 62


state 53

    (42) param_fit -> GUION FIT IGUAL . CADENA
    (43) param_fit -> GUION FIT IGUAL . ID

    CADENA          shift and go to state 63
    ID              shift and go to state 64


state 54

    (40) param_name -> GUION NAME IGUAL . CADENA
    (41) param_name -> GUION NAME IGUAL . ID

    CADENA          shift and go to state 65
    ID              shift and go to state 66


state 55

    (44) param_type -> GUION TYPE IGUAL . CADENA
    (45) param_type -> GUION TYPE IGUAL . ID

    CADENA          shift and go to state 67
    ID              shift and go to state 68


state 56

    (46) param_delete -> GUION DELETE IGUAL . CADENA
    (47) param_delete -> GUION DELETE IGUAL . ID

    CADENA          shift and go to state 69
    ID              shift and go to state 70


state 57

    (48) param_add -> GUION ADD IGUAL . ENTERO

    ENTERO          shift and go to state 71


state 58

    (35) param_size -> GUION SIZE IGUAL ENTERO .

    GUION           reduce using rule 35 (param_size -> GUION SIZE IGUAL ENTERO .)
    $end            reduce using rule 35 (param_size -> GUION SIZE IGUAL ENTERO .)


state 59

    (38) param_unit -> GUION UNIT IGUAL CADENA .

    GUION           reduce using rule 38 (param_unit -> GUION UNIT IGUAL CADENA .)
    $end            reduce using rule 38 (param_unit -> GUION UNIT IGUAL CADENA .)


state 60

    (39) param_unit -> GUION UNIT IGUAL ID .

    GUION           reduce using rule 39 (param_unit -> GUION UNIT IGUAL ID .)
    $end            reduce using rule 39 (param_unit -> GUION UNIT IGUAL ID .)


state 61

    (36) param_path -> GUION PATH IGUAL CADENA .

    GUION           reduce using rule 36 (param_path -> GUION PATH IGUAL CADENA .)
    $end            reduce using rule 36 (param_path -> GUION PATH IGUAL CADENA .)


state 62

    (37) param_path -> GUION PATH IGUAL ID .
